# GLSL-Include-Preprocessor

./: CMakeLists.txt  README.md  main.cpp
PreprocessorInclude/: IncludeImplementation.cpp  IncludeImplementation.h  RecursiveInclude.cpp  RecursiveInclude.h
TestAssets/: fileToIncludeRelative.txt  includeRelativeRecursive.txt
TestAssets/InvalidIncludes/: illFormedIncludeFileName.txt  illFormedIncludeLine.txt  invalidDirectory.txt  invalidPreprocessorDirective.txt
TestAssets/RecursiveInclude/: fileToInclude.txt  includeFirstLineRecursive.txt  includeRelativeRecursive.txt
TestAssets/RecursiveInclude/ExpectedResult/: includeFirstLineRecursive.txt  includeRelativeRecursive.txt
TestAssets/RecursiveInclude/ExtraRecursive/: includeRelativeRecursive.txt
TestAssets/SingleInclude/: includeFirstLine.txt  includeFirstLineRelative.txt  includeMiddleLine.txt
TestAssets/SingleInclude/ExpectedResult/: includeFirstLine.txt  includeMiddleLine.txt  includeRelativeFirstLine.txt
Tests/: TestErrors.cpp  TestErrors.h  TestNoIncludes.cpp  TestNoIncludes.h  TestRecursiveInclude.cpp  TestRecursiveInclude.h  TestSingleInclude.cpp  TestSingleInclude.h  TestSuite.cpp  TestSuite.h
